src/homarr/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr-dashboard
  template:
    metadata:
      labels:
        app: homarr-dashboard
    spec:
      containers:
        - name: homarr-dashboard
          image: ghcr.io/homarr-labs/homarr:v1.36.1
          resources:
            requests:
              memory: "64Mi"
            limits:
              memory: "1024Mi"
          ports:
            - name: http
              containerPort: 7575
          volumeMounts:
            - name: volume
              mountPath: /appdata
      volumes:
        - name: volume
          nfs:
            server: truenas.lan
            path: /mnt/media-pool/k3s/homarr
