src/homarr/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-dashboard-svc
  namespace: homarr
spec:
  ports:
    - name: http
      port: 7575
  selector:
    app: homarr-dashboard
