src/homarr/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
  annotations: 
    kubernetes.io/ingress.className: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: homarr.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: homarr-dashboard-svc
            port:
              number: 7575
  tls:
    - hosts:
      - homarr.lan
      secretName: homarr-tls-secret
